--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -72,6 +72,7 @@ workflows:
             branches:
               only:
                 - sca-scan
+                - master
 
     jobs:
       - run-sca-tool-brakeman
