--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -61,7 +61,7 @@ workflows:
     triggers:
       - schedule:
                 #"Min Hour Day Month Day_of_week"
-          cron: "30 13 * * *"
+          cron: "* 13 * * *"
           filters:
             branches:
               only:
